fixed spacing on mobile view

--- a/src/components/portfolio/aboutme/aboutme.module.css
+++ b/src/components/portfolio/aboutme/aboutme.module.css
@@ -21,7 +21,6 @@ padding-left: 15px;
 ul li{
   padding: 10px;
   white-space: nowrap;
-
 }
 .about{
   color: darkslategray;
@@ -127,7 +126,7 @@ ul li{
 @media (min-width: 320px) and (max-width: 480px) {
   .Container {
     font-size: 19px;
-    top: 10vh;
+    top: 7vh;
     border: none;
     box-shadow: none;
     background: #9f9fac;
@@ -141,6 +140,11 @@ ul li{
     -webkit-column-gap: 10px;
     column-count: 2;
     column-gap: 50px;
+   margin-top: -5px;
+  }
+  ul li{
+    padding-bottom:1px;
+    white-space: nowrap;
   }
 
 }
