--- a/src/components/portfolio/portfolio.module.css
+++ b/src/components/portfolio/portfolio.module.css
@@ -185,7 +185,7 @@
 @media (min-width: 320px) and (max-width: 480px) {
   .button {
     position: fixed;
-    left: 79%;
+    left: 75%;
     top: 2%;
     z-index: 100;
   }
