--- a/src/components/portfolio/projects/projects.module.css
+++ b/src/components/portfolio/projects/projects.module.css
@@ -146,7 +146,7 @@ img {
 @media (min-width: 320px) and (max-width: 480px) {
   .Container {
     font-size: 19px;
-    top: 10vh;
+    top: 9vh;
     border:none;
     box-shadow: none;
     background: #9f9fac;
