--- a/src/components/portfolio/workxp/workxp.module.css
+++ b/src/components/portfolio/workxp/workxp.module.css
@@ -79,7 +79,7 @@
 @media (min-width: 320px) and (max-width: 480px) {
   .Container {
     font-size: 19px;
-    top: 10vh;
+    top: 9vh;
 
     border: none;
     box-shadow: none;
